--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 @defer(when !isLoading) {
   <ion-list>
     @for (item of movies; track item.id) {
-    <ion-item  class="ion-padding-bottom" lines="full" button [routerLink]="['/details', item.id]">
+    <ion-item  class="ion-padding-bottom" lines="full" button [routerLink]="['/movies/details', item.id]">
       <ion-avatar slot="start">
         <img [src]="imageUrl + '/w92' + item.poster_path" alt="poster" />
       </ion-avatar>
