--- a/src/app/movies/movies.page.html
+++ b/src/app/movies/movies.page.html
@@ -10,7 +10,7 @@
 @defer(when !isLoading) {
   <ion-list>
     @for (item of movies; track item.id) {
-    <ion-item  class="ion-padding-bottom" lines="full" button [routerLink]="['/details', item.id]">
+    <ion-item  class="ion-padding-bottom" lines="full" button [routerLink]="['/movies/details', item.id]">
       <ion-avatar slot="start">
         <img [src]="imageUrl + '/w92' + item.poster_path" alt="poster" />
       </ion-avatar>
@@ -39,7 +39,7 @@
     <ion-infinite-scroll (ionInfinite)="loadMore($event)">
       <ion-infinite-scroll-content
         loadingSpinner="bubbles"
-        loadingText="Loading more data..."
+        loadingText="Loading..."
       />
     </ion-infinite-scroll>
   </ion-list>
