--- a/src/app/movies/top-movies/top-movies.component.html
+++ b/src/app/movies/top-movies/top-movies.component.html
@@ -1,20 +1,60 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title align="center">
-      Top Movies
-    </ion-title>
+    <ion-buttons  slot="end">
+      <ion-back-button defaultHref="true"></ion-back-button>
+    </ion-buttons>
+    <ion-title align="center">Top rated movies</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+@defer(when !isLoading) {
+  <ion-list>
+    @for (item of movies; track item.id) {
+    <ion-item  class="ion-padding-bottom" lines="full" button [routerLink]="['/movies/details', item.id]">
+      <ion-avatar slot="start">
+        <img [src]="imageUrl + '/w92' + item.poster_path" alt="poster" />
+      </ion-avatar>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-label class="ion-text-wrap">
+        <h3>{{ item.title }}</h3>
+        <p>{{ item.release_date | date:'y' }}</p>
+      </ion-label>
+      <ion-badge slot="end"> {{ item.vote_average }} </ion-badge>
+    </ion-item>
+    } 
+    @empty { 
+      @if (!isLoading && !errorMessage) {
+      <ion-item lines="none">
+        <ion-label class="ion-text-center">No movies found</ion-label>
+      </ion-item>
+      } @else {
+          <ion-alert
+            header="Error"
+            [message]="errorMessage"
+            isOpen="true"
+            [buttons]="['Ok']"
+          />
+      }
+    }
+    <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="Loading..."
+      />
+    </ion-infinite-scroll>
+  </ion-list>
+}
+@placeholder {
+  <ion-list class="ion-padding-top">
+    @for (fakeItem of dummyArray; track fakeItem) {
+    <ion-item lines="none" class="ion-padding-bottom">
+      <ion-avatar slot="start">
+        <ion-skeleton-text></ion-skeleton-text>
+      </ion-avatar>
+      <ion-skeleton-text animated style="height: 40px" />
+    </ion-item>
+  }
+</ion-list>
+}
 </ion-content>
