modif navigation et ajout page détails

--- a/src/app/movies/movies.page.html
+++ b/src/app/movies/movies.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title align="center">
-      Now playing
+      All Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
