--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <div class="ion-page" id="main-content" >
     <ion-buttons class="ion-justify-content-between" slot="start">
       <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref (click)="back()" ></ion-back-button>
     </ion-buttons>
     <ion-router-outlet  id="main-content"></ion-router-outlet>
   </div>
